k8s/media/calibre-web/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: volume
        - name: media
          persistentVolumeClaim:
            claimName: nfs-media
      containers:
        - name: calibre-web
          image: ghcr.io/linuxserver/calibre-web:0.6.25@sha256:6e8a8048571fd0f58cbf0eaf7a83c8623a028a159070e2f515e2e26abf91affb
          securityContext:
            privileged: false
          resources:
            requests:
              memory: 300M
            limits:
              memory: 1G
          volumeMounts:
            - name: volume
              mountPath: /config
            - name: media
              subPath: eBooks
              mountPath: /books
          ports:
            - name: http
              containerPort: 8083
